# chat-cli

./: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.build.txt  requirements.txt
doc/: example_curl.sh
src/chatcli/: __init__.py  cli.py
src/duckchat/: __init__.py  cli.py  duckduckgo.py
src/test/chatcli/: test_cli.py  test_duckduckgo.py
src/test/duckchat/: test_cli.py  test_duckduckgo.py
