[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatcli"
version = "0.1.0"
dependencies = [
    "google_speech",
    "requests",
    "rich",
]
description = "command line interface for the DuckDuckGo AI chat"
authors = [
    { name = "hek2mgl", email = "hek2mgl@metashock.net" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hek2mgl/chatcli.git"
Issues = "https://github.com/hek2mgl/chatcli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chatcli"]

[project.scripts]
chatcli = "chatcli.cli:main"
